[package]
name = "dslr_capture"
version = "0.1.0"
authors = ["Yasushi Sakai <ysshski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gphoto={git="https://github.com/yasushisakai/gphoto-rs"}

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["image"]
